infra/k8s-test/echo-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
spec:
  rules:
    - host: echo1.ticketing.host
      http:
        paths:
          - backend:
              serviceName: echo1
              servicePort: 80
    - host: echo2.ticketing.host
      http:
        paths:
          - backend:
              serviceName: echo2
              servicePort: 80
