infra/k8s-test/example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: www.ticketing.work
      http:
        paths:
          - path: /api/users/?(.*)
            backend:
              serviceName: auth-service
              servicePort: 3000
          - path: /api/tickets/?(.*)
            backend:
              serviceName: tickets-service
              servicePort: 3000
          - path: /api/orders/?(.*)
            backend:
              serviceName: orders-service
              servicePort: 3000
          - path: /api/payments/?(.*)
            backend:
              serviceName: payments-service
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-service
              servicePort: 3000
